overflow fixed

--- a/September 2023/27.09.2023/homework/style.css
+++ b/September 2023/27.09.2023/homework/style.css
@@ -6,7 +6,6 @@ body {
     align-items: center;
     background-color: rgba(230, 255, 255, 0.479);
     font-family: 'Roboto', sans-serif;
-    overflow: hidden;
 }
 
 header {
